# backend/src/routes/mediaRoutes.js
@@ -1,11 +1,12 @@
 import {Router} from 'express';
-import { getTrending, getLatestEpisodes, getDiscover, getMediaDetails } from '../controllers/mediaController.js';
+import { getTrending, getLatestEpisodes, getDiscover, getMediaDetails, getSeasonEpisodes } from '../controllers/mediaController.js';
 
 const router = Router();
 
 router.get('/trending', getTrending);
 router.get('/latest-episodes', getLatestEpisodes);
 router.get('/discover', getDiscover);
+router.get('/series/:id/season/:seasonNumber', getSeasonEpisodes);
 router.get('/:type/:id', getMediaDetails)
 
 export default router;
